2010-11-24  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_matchcondition
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_lock
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_loadmodules
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_loaddbgroup
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_install
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_iconworks
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_htmlmail
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_fullsearch
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_frontendedit
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_formmail
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_foldertree
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_flexformtools
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_flashmessagequeue
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_flashmessage
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_extobjbase
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_extmgm
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_extfilefunc
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_exec
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_exception
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_diff
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_db
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_cs
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_compressor
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_clipboard
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_cli
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_cache